confik-macros/tests/trybuild/fail-uncreatable-type.rs
#[derive(confik::Configuration, Debug)]
enum C {}

fn main() {}
